added Our Donate Plan

--- a/donate-today.html
+++ b/donate-today.html
@@ -68,6 +68,60 @@
             <button class="btn-button">Donate Now</button>
         </section>
       </main>
-   
+
+      <!-- Our Donate Plan -->
+
+      <main>
+        <section class="our donate plan">
+            <h1 class="section-title"> Our Donate Plan</h1>
+            <p class="section-description">Lorem ipsum dolor sit amen, usu cu esse possie referent's, at eam falla deterruisset. No duo populi animal coulisse, enid</p>
+  
+            <!-- .donate-container>.donate*4>img+p.donate-title-2+p.donate-description-2> -->
+
+            <div class="donate-container">
+                <div class="donate-1">
+                    <img src="./icons/food.png" alt="">
+                    <p class="donate-title-2">Food for a family</p>
+                    <p class="donate-description-2">Amen minim mollie non destruct 
+                        ullages est sit aliquant dolor do amen 
+                        sint. Veldt official consequent dubs enif 
+                        veldt mollie.</p>
+                </div>
+                <div class="donate-2">
+                    <img src="./icons/Frame-1.png" alt="">
+                    <p class="donate-title-2">Education for a child</p>
+                    <p class="donate-description-2">
+                        Amen minim mollie non destruct 
+                        ullages est sit aliquant dolor do amen 
+                        sint. Veldt official consequent dubs enif 
+                        veldt mollie.
+                    </p>
+                </div>
+                <div class="donate-3">
+                    <img src="./icons/shelter.png" alt="">
+                    <p class="donate-title-2">Shelter for a family</p>
+                    <p class="donate-description-2">Amen minim mollie non destruct 
+                        ullages est sit aliquant dolor do amen 
+                        sint. Veldt official consequent dubs enif 
+                        veldt mollie.</p>
+                </div>
+            </div>
+
+
+
+        </section>
+      </main>
+        
+
+     <!-- Their lives depend on your donation -->
+
+
+     <main>
+      <section class="depend">
+      
+      </section>
+     </main>
+
+
   </body>
 </html>
