--- a/donate-today.html
+++ b/donate-today.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+   
     <!-- Header section -->
 
     <header class="header">
@@ -159,6 +160,21 @@
 
       </section>
      </main>
+        
+
+      <!-- finish section -->
+
+      <main>
+        <form class="input-1" action="">
+              <input type="text" class="email" placeholder="Email" />
+              <button class="submit">Subscribe</button>
+        </form>
+      </main>
+         
+      <div class="input-2">
+        <h1 class="input-3" >Be Humble</h1>
+        <p class="input-4">I'm gonna do i</p>
+      </div>
 
 
   </body>
